[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "obpcreator"
version = "0.0.2"
authors = [
    { name = "Anton Wiberg", email = "wiberg.anton@gmail.com" },
	{name = "Finn Lütjens", email = "finn.luetjens@uni-wuppertal.de"}
]
description = "Generation of open beam path files based on different strategies"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "svgpathtools",
    "numpy",
    "matplotlib",
    "obplib",
    "obflib",
    "pyvista",
    "shapely",
    "pydantic",
    "pytest",
    "opencv-python",
    "scipy",
    "logbook",
]
requires-python = ">=3.7"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Adjust this to match your actual package structure
"obpcreator.obf.helpers" = ["*.json", "*.lua", "*.py","*.obp"]

